@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-29T16:41:29Z",
+  "timestamp" : "2022-06-30T01:23:00Z",
   "count_outdated" : 332,
   "uniques_outdated" : 211,
-  "count" : 356,
+  "count" : 357,
   "uniques" : 225,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
