@@ -1,3 +1,10 @@
+2022-06-30T01:23:00Z:
+* notice: last 14d: unq all: 2 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 211 332 / 225 356
+* notice: next accum: outdated-unq outdated-all / unq all: 211 332 / 225 357
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-29]
+
 2022-06-29T16:41:29Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 210 330 / 225 355
